# Doodle-Jump

./: Boost.cpp  Boost.hpp  CMakeLists.txt  Enemy.hpp  Game.cpp  Game.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  Readme.md
src/: Boost.cpp  Boost.hpp  CMakeLists.txt  Enemy.cpp  Game.cpp  Game.hpp  Player.cpp  main.cpp
